lms-service: add method for user can see which courses they have enrolled in (already taken and pending)